--- a/pages/technology.html
+++ b/pages/technology.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,16 +12,25 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bellefair&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/scripts.js" defer></script>
-    <title>Space tourism website Technology Page</title>
+
+    <title>Space Tourism Website | Technology Page</title>
   </head>
+
   <body class="technology-page">
     <header class="header">
       <div class="header__logo">
-        <img src="../assets/shared/logo.svg" alt="" class="header__logo-img" />
+        <img
+          src="../assets/shared/logo.svg"
+          alt="Space Tourism logo"
+          class="header__logo-img"
+        />
       </div>
+
       <div class="header-line"></div>
+
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
@@ -30,26 +39,30 @@
           <li class="nav__item">
             <a href="destination.html" class="nav__link">Destination</a>
           </li>
-          <li class="nav__item"><a href="crew.html" class="nav__link">Crew</a></li>
+          <li class="nav__item">
+            <a href="crew.html" class="nav__link">Crew</a>
+          </li>
           <li class="nav__item">
             <a href="technology.html" class="nav__link">Technology</a>
           </li>
         </ul>
       </nav>
-      <!-- burger menu button -->
-      <button class="hamburger" id="menu-btn">
+
+      <!-- Burger menu button -->
+      <button class="hamburger" id="menu-btn" aria-label="Toggle menu">
         <span class="hamburger-top"></span>
         <span class="hamburger-middle"></span>
         <span class="hamburger-bottom"></span>
       </button>
-      <!-- burger Menu items -->
+
+      <!-- Burger menu items -->
       <div class="burger-menu" id="burger-menu">
         <ul class="burger-menu__list">
           <li class="burger-menu__item">
             <a href="../index.html" class="burger-menu__link">00 Home</a>
           </li>
           <li class="burger-menu__item">
-            <a href="destination.html" class="burger-menu__link">01 Destination</a>
+            <a href="destination.html" class="burger-menu__link"> 01 Destination </a>
           </li>
           <li class="burger-menu__item">
             <a href="crew.html" class="burger-menu__link">02 Crew</a>
@@ -60,30 +73,34 @@
         </ul>
       </div>
     </header>
+
     <main class="technology__main">
       <section class="technology">
-        <!-- Page heading component (separate block) -->
+        <!-- Page heading -->
         <div class="page-heading technology__heading">
-          <h2><span>03</span>Space Launch 101</h2>
+          <h2>
+            <span>03</span>
+            Space Launch 101
+          </h2>
         </div>
 
-        <!-- Crew content wrapper -->
+        <!-- Technology content -->
         <div class="technology__content">
-          <!-- Crew text/details section -->
+          <!-- Image section -->
           <picture class="technology__img-container">
             <source
               media="(min-width: 1024px)"
               srcset="../assets/technology/image-launch-vehicle-portrait.jpg"
             />
-
-            <!-- Default (mobile-first): portrait image -->
+            <!-- Default (mobile-first) -->
             <img
               src="../assets/technology/image-launch-vehicle-landscape.jpg"
               alt="Launch vehicle"
               class="technology__img"
             />
           </picture>
-          <!-- Pagination and text -->
+
+          <!-- Details section -->
           <div class="technology__details">
             <!-- Pagination -->
             <div class="technology__pagination">
@@ -109,6 +126,8 @@
                 3
               </button>
             </div>
+
+            <!-- Explanation -->
             <div class="technology__explanation">
               <div class="technology__text-box">
                 <p
@@ -120,7 +139,8 @@
                   Launch vehicle
                 </h3>
               </div>
-              <p class="technology__description text-bellafair">
+
+              <p class="technology__description text-bellefair">
                 A launch vehicle or carrier rocket is a rocket-propelled vehicle used to
                 carry a payload from Earth's surface to space, usually to Earth orbit or
                 beyond. Our WEB-X carrier rocket is the most powerful in operation.
@@ -129,11 +149,8 @@
               </p>
             </div>
           </div>
-
-          <!--  explanation-->
-
+        </div>
       </section>
     </main>
-
   </body>
 </html>
